--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<Html lang="pt br">
+
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>CONEXAO-NJR</title>
+</head>
+
 <body>
 
-<header>conexao-NJR</header>
+    <header>CONEXAO-NJR</header>
 
+    <section>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=yZPUOrdO_9Emzaga" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p>10 GOLS HISTORICOS DE NEYMAR NA CHAMPIONS LEAGUE</p>
