--- a/index.html
+++ b/index.html
@@ -6,30 +6,23 @@
 </head>
 
 <body>
-
-    <header>CONEXAO-NJR</header>
-
-    <section>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=yZPUOrdO_9Emzaga" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-<h1>10 GOLS HISTORICOS DE NEYMAR NA CHAMPIONS LEAGUE</h1>
-
+    
 </body>
 
  <header>CONEXAO-NJR</header>
 
-<section>
+   <section>
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=q25oJfDaFWlFwrFP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div>
         <h1>10 GOLS HISTORICOS DE NEYMAR NA CHAMPIONS LEAGUE</h1>
-        <P> #futebol #Neymar #gols #chanpionsleague</p>
+        <h1> #futebol #Neymar #gols #chanpionsleague</h1>
     </div>
-</section>
+ </section>
 
 
-  <body>
+<body>
 
   </Html>
