--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
-<Html lang="pt br">
+<html lang="pt-BR">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href=<iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=oKL3jAJ5sJoDYGks" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      rel="stylesheet"
+    />
+    <title>conexao-NJR</title>
+  </head>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>CONEXAO-NJR</title>
-</head>
+  <body>
+    <head>CONEXAO-NJR</head>
 
-<body>
-    
-</body>
-
- <header>CONEXAO-NJR</header>
-
-   <section>
-    <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=q25oJfDaFWlFwrFP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-
-    <div>
+    <section>
+      <div class="chamada-texto">
         <h1>10 GOLS HISTORICOS DE NEYMAR NA CHAMPIONS LEAGUE</h1>
-        <h1> #futebol #Neymar #gols #chanpionsleague</h1>
-    </div>
- </section>
+        <p>#neymar #futebol #gols</p>
+      </div>
 
-
-<body>
-
-  </Html>
+      <div>
+        <iframe
+          width="560"
+          height="315"
+          src=
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+  </body>
+</html>
