--- a/index.html
+++ b/index.html
@@ -1,35 +1,24 @@
-<html lang="pt-BR">
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href=<iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=t2kS9Dqg17LrskEh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      
+<html  lang="pt-BR">
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
     <title>conexao-NJR</title>
-  </head>
+</head>
 
-  <body>
-    <head>CONEXAO-NJR</head>
+<body>
+    <header>CONEXAO-NJR</header>
 
-    <section>
-      <div class="chamada-texto">
-        <h1>10 GOLS HISTORICOS DE NEYMAR NA CHAMPIONS LEAGUE</h1>
-        <p>#neymar #futebol #gols</p>
-      </div>
+<section class="chamada">
+        <div class="chamada-texto">
+            <h1>𝐓𝐎𝐏 𝟏𝟎 𝐆𝐎𝐋𝐒 𝐃𝐄 𝐍𝐄𝐘𝐌𝐀𝐑 𝐍𝐀 𝐂𝐇𝐀𝐌𝐏𝐈𝐎𝐍𝐒</h1>
+            <p>#Neymar #futebol #gols #skills</p>
+        </div>
 
-      <div>
-        <iframe
-          width="560"
-          height="315"
-          src=
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-      </div>
+        <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/n4sQ4wQ6qd8?si=SV5iPhgUzEKlfSsP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+        </div>
     </section>
-  </body>
-</html>
+
